navbar is fixed but does not overlap top of page

--- a/public/customStyles/navbar.css
+++ b/public/customStyles/navbar.css
@@ -1,3 +1,7 @@
+body {
+  margin-top: 5em;
+}
+
 #navbar {
-  position:sticky
+  position: fixed;
 }
